# context-handling-bigmodule_PikaRobot_25112025

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  TechnicalDesign_ImplementationSpec.md  docker-compose.yml  pyproject.toml  requirements.txt  test_conversation_event_api.ps1  test_friendship_score_api.py
docs/: ARCHITECTURE_CURRENT_.md  TROUBLESHOOTING_DB_REDIS.md  WORKER_FLOW.md
src/: .env.example  .gitignore  .sh  .sh_RabbitMQ.md  CHANGELOG.md  Dockerfile  Dockerfile.worker  README.md  README_ENV.md  TechnicalDesign_ImplementationSpec.md  detail_cron_job_.md  docker-compose.db.yml  docker-compose.example.yml  docker-compose.prod.yml  docker-compose.worker.yml  docker-compose.yml  env.example  full_requirements_28112025.txt  pyproject.toml  requirements.txt  start-services.ps1  start-services.sh  test_health.py  worker.py  worker_dev.py
src/app/: __init__.py  main_app.py
src/app/api/: __init__.py  dependency_injection.py
src/app/api/v1/: __init__.py  router_v1_main.py
src/app/api/v1/endpoints/: __init__.py  endpoint_activities_suggest.py  endpoint_conversation_events.py  endpoint_conversations_get.py  endpoint_friendship_calculate_score.py  endpoint_friendship_status.py  endpoint_health_check.py
src/app/background/: Database_Opt.md  __init__.py  conversation_event_scheduler.py  detail_cron_job.md  rabbitmq_consumer.py  rabbitmq_publisher.py
src/app/cache/: __init__.py  candidates_cache_manager.py  redis_cache_manager.py
src/app/core/: __init__.py  config_settings.py  constants_enums.py  exceptions_custom.py  status_codes.py
src/app/db/: __init__.py  database_connection.py
src/app/models/: __init__.py  agent_prompting_model.py  conversation_event_model.py  friendship_agent_mapping_model.py  friendship_status_model.py  prompt_template_model.py
src/app/repositories/: __init__.py  agent_prompting_repository.py  conversation_event_repository.py  friendship_agent_mapping_repository.py  friendship_status_repository.py  prompt_template_repository.py
src/app/schemas/: __init__.py  activity_suggestion_schemas.py  common_schemas.py  conversation_event_schemas.py  conversation_schemas.py
src/app/services/: __init__.py  activity_suggestion_service.py  agent_selection_service.py  conversation_data_fetch_service.py  conversation_event_processing_service.py  conversation_event_service.py  friendship_score_calculation_service.py  friendship_status_store_service.py  friendship_status_update_service.py  health_check_service.py
src/app/services/utils/: __init__.py  llm_analysis_utils.py
src/app/utils/: __init__.py  color_log.py  color_worker.py  conversation_log_transform.py  input_validators.py  logger_setup.py  topic_utils.py
(+47 files in other folders)
